<resources>
    <string name="app_name">宅影視</string>
    <string name="title_home">首頁</string>
    <string name="title_search">搜尋</string>
    <string name="title_discover">探索</string>
    <string name="title_watchlist">觀看清單</string>
    <string name="upcoming">即將上映</string>
    <string name="label_movies">電影</string>
    <string name="label_tvshows">影集</string>
    <string name="label_people">人物</string>
    <string name="now_playing">現正熱映</string>
    <string name="trending">本週熱門</string>
    <string name="label_media_poster">海報</string>
    <string name="label_media_title">標題</string>
    <string name="popular">最多人觀看</string>
    <string name="title_upcoming_movies">即將上映電影</string>
    <string name="title_now_playing_movies">現正熱映電影</string>
    <string name="title_trending_movies">本週熱門電影</string>
    <string name="title_popular_movies">最多人觀看電影</string>
    <string name="title_netflix_movies">Netflix電影</string>
    <string name="title_disney_movies">Disney+電影</string>
    <string name="title_catchplay_movies">CatchPlay+電影</string>
    <string name="title_prime_movies">Prime Video電影</string>
    <string name="title_popular_tvShows">最多人觀看影集</string>
    <string name="title_trending_tvShows">本週熱門影集</string>
    <string name="title_netflix_tvShows">Netflix影集</string>
    <string name="title_disney_tvShows">Disney+影集</string>
    <string name="title_catchplay_tvShows">CatchPlay+影集</string>
    <string name="title_prime_tvShows">Prime Video影集</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_title_discover">探索</string>
    <string name="label_search_movies_tvshows_people">搜尋電影, 影集, 人物</string>
    <string name="label_about">關於</string>
    <string name="label_cast">演員</string>
    <string name="label_crew">製作團隊</string>
    <string name="label_genre">類別</string>
    <string name="label_watchlist">待觀看</string>
    <string name="label_history">已觀看</string>
    <string name="label_read_more">更多</string>
    <string name="label_other_info">其他相關資訊</string>
    <string name="label_status">狀態</string>
    <string name="label_runtime">片長</string>
    <string name="label_budget">總預算</string>
    <string name="label_box_office_revenue">累計票房</string>
    <string name="label_empty">目前尚無資料</string>
    <string name="label_first_air_date">最初放送日期</string>
    <string name="label_last_air_date">最新放送日期</string>
    <string name="label_numOfEpisodes">已上線集數</string>
    <string name="label_video_thumbnail">影片縮圖</string>
    <string name="label_videos">相關影音</string>
    <string name="label_youtube_player">Youtube Player</string>
    <string name="label_youtube_player_error_display">影片播放器初始化發生錯誤!</string>
    <string name="label_profile_main_name">主名稱</string>
    <string name="label_profile_sub_name">副名稱</string>
    <string name="label_profile_img">頭像</string>
    <string name="label_similar">類似影片</string>
    <string name="label_review">評論</string>
    <string name="label_seasons">季數</string>
    <string name="toastMsg_link_not_exist">連結不存在!</string>
    <string name="label_biography">個人簡介</string>
    <string name="label_other_names">其他名稱</string>
    <string name="label_birthday">出生日</string>
    <string name="label_deathday">逝世</string>
    <string name="label_placeFrom">來自於</string>
    <string name="label_age">年紀</string>
    <string name="label_images">圖片</string>
    <string name="label_tvShow_genres">影集分類</string>
    <string name="label_movie_genres">電影分類</string>
    <string name="title_genres">類別</string>
    <string name="msg_saved_to_watchlist">已儲存至待觀看清單</string>
    <string name="msg_removed_from_watchlist">已從待觀看清單中移除</string>
    <string name="msg_operation_error">資料存取發生錯誤</string>
    <string name="label_add_to_watchlist">加入至待看清單</string>
    <string name="label_existed_in_watchlist">已存在待看清單</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="label_my_profile">我的檔案</string>
    <string name="label_anonymous_description">登入同步電影及影集資料</string>
    <string name="label_profile_description">檢視檔案</string>
    <string name="label_login_to_tmdb">登入至TMDB</string>
    <string name="title_profile">帳戶</string>
    <string name="label_login">登入</string>
    <string name="label_logout">登出</string>
    <string name="label_ok">確認</string>
    <string name="label_cancel">取消</string>
    <string name="label_logout_alert_message">確認登出此帳號?</string>
    <string name="label_authorization_denied">請求許可遭拒</string>
    <string name="label_retry">重試</string>
    <string name="msg_login_successful">登入成功</string>
    <string name="msg_login_failed">登入失敗</string>
    <string name="msg_logout_successful">成功登出</string>
    <string name="msg_no_internet_available">無網際網路連線</string>
    <string name="label_apply">送出</string>
    <string name="label_remove">移除</string>
    <string name="label_rating">進行評分</string>
    <string name="label_watch_provider">觀看平台</string>
    <string name="format_rated_with_score">已送出評分: %.1f</string>
    <string name="label_remove_rating">成功移除評分</string>
    <string name="label_rating_cant_be_zero">分數無法為0</string>
    <string name="label_unwatched_list">待觀看清單</string>
    <string name="label_rated_list">已評清單</string>
    <string name="label_rated_list_not_login">已評清單\n請登入以使用此功能</string>
    <string name="label_no_data_available">目前尚無資料</string>
    <string name="label_on_air_date">上線日期</string>
    <string name="label_app_version">應用程式版本</string>
    <string name="label_nfx">Netflix</string>
    <string name="label_disney_plus">Disney+</string>
    <string name="label_catchplay_plus">Catchplay+</string>
    <string name="label_tmdb">TMDB</string>
    <string name="label_justwatch">JustWatch</string>
    <string name="label_prime_video">Amazon</string>
    <string name="label_category_name">類別名稱</string>
    <string name="label_sub_category_name">子類別名稱</string>
    <string name="label_ready_to_update">已準備好更新</string>
    <string name="label_install">安裝</string>
</resources>