<?xml version="1.0" encoding="utf-8"?><!-- Important: fragment id must match bottomNavigation menu item's id -->
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/home_navigation">
    <navigation
        android:id="@+id/home_navigation"
        app:startDestination="@id/homeFragment">
        <fragment
            android:id="@+id/homeFragment"
            android:name="com.robinhsueh.nerdia.view.fragments.home.HomeFragment"
            android:label="@string/title_home"
            tools:layout="@layout/fragment_home">
            <action
                android:id="@+id/action_homeFragment_to_verticalBrowseFragment"
                app:destination="@id/verticalBrowseFragment"
                app:enterAnim="@anim/fade_in"
                app:exitAnim="@anim/fade_out" />
        </fragment>
        <fragment
            android:id="@+id/verticalBrowseFragment"
            android:name="com.robinhsueh.nerdia.view.fragments.home.VerticalBrowseFragment"
            tools:layout="@layout/fragment_general_gridshimmer_list">
            <action
                android:id="@+id/action_verticalBrowseFragment_to_homeFragment"
                app:destination="@id/homeFragment"
                app:enterAnim="@anim/fade_in"
                app:exitAnim="@anim/fade_out" />
        </fragment>
    </navigation>
    <navigation
        android:id="@+id/discover_navigation"
        app:startDestination="@id/discoverFragment">
        <fragment
            android:id="@+id/genreResultFragment"
            android:name="com.robinhsueh.nerdia.view.fragments.discover.GenreResultsFragment"
            tools:layout="@layout/fragment_genres_list">
            <action
                android:id="@+id/action_genreResultFragment_to_genresListFragment"
                app:destination="@id/genresListFragment"
                app:enterAnim="@anim/fade_in"
                app:exitAnim="@anim/fade_out" />
        </fragment>
        <fragment
            android:id="@+id/genresListFragment"
            android:name="com.robinhsueh.nerdia.view.fragments.discover.GenresListFragment"
            android:label="@string/title_genres"
            tools:layout="@layout/fragment_genres_list">
            <action
                android:id="@+id/action_genresListFragment_to_discoverFragment"
                app:destination="@id/discoverFragment"
                app:enterAnim="@anim/fade_in"
                app:exitAnim="@anim/fade_out" />
            <action
                android:id="@+id/action_genresListFragment_to_genreResultFragment"
                app:destination="@id/genreResultFragment"
                app:enterAnim="@anim/fade_in"
                app:exitAnim="@anim/fade_out" />
        </fragment>
        <fragment
            android:id="@+id/discoverFragment"
            android:name="com.robinhsueh.nerdia.view.fragments.discover.DiscoverFragment"
            android:label="@string/title_discover"
            tools:layout="@layout/fragment_discover">
            <action
                android:id="@+id/action_discoverFragment_to_searchFragment"
                app:destination="@id/searchFragment"
                app:enterAnim="@anim/fade_in"
                app:exitAnim="@anim/fade_out" />
            <action
                android:id="@+id/action_discoverFragment_to_genresListFragment"
                app:destination="@id/genresListFragment"
                app:enterAnim="@anim/fade_in"
                app:exitAnim="@anim/fade_out" />
        </fragment>
        <fragment
            android:id="@+id/searchFragment"
            android:name="com.robinhsueh.nerdia.view.fragments.discover.SearchFragment"
            android:label="@string/title_search"
            tools:layout="@layout/fragment_search">
            <action
                android:id="@+id/action_searchFragment_to_discoverFragment"
                app:destination="@id/discoverFragment"
                app:enterAnim="@anim/fade_in"
                app:exitAnim="@anim/fade_out" />
        </fragment>
    </navigation>
    <fragment
        android:id="@+id/watchlistFragment"
        android:name="com.robinhsueh.nerdia.view.fragments.watchlist.WatchlistFragment"
        android:label="@string/title_watchlist"
        tools:layout="@layout/fragment_watch_list" />
    <navigation
        android:id="@+id/profile_navigation"
        app:startDestination="@+id/profileFragment">
        <fragment
            android:id="@+id/profileFragment"
            android:name="com.robinhsueh.nerdia.view.fragments.profile.ProfileFragment"
            android:label="@string/title_profile"
            tools:layout="@layout/fragment_profile">
            <action
                android:id="@+id/action_profileFragment_to_loginTmdbFragment"
                app:destination="@id/loginTmdbFragment"
                app:enterAnim="@anim/fade_in"
                app:exitAnim="@anim/fade_out" />
            <action
                android:id="@+id/action_profileFragment_to_watchlistTab"
                app:destination="@id/watchlistTab" />
            <action
                android:id="@+id/action_profileFragment_to_ratedListFragment"
                app:destination="@id/ratedListFragment" />
        </fragment>
        <fragment
            android:id="@+id/loginTmdbFragment"
            android:name="com.robinhsueh.nerdia.view.fragments.profile.LoginTmdbFragment"
            android:label="@string/label_login"
            tools:layout="@layout/fragment_login_tmdb">
            <action
                android:id="@+id/action_loginTmdbFragment_to_profileFragment"
                app:destination="@id/profileFragment"
                app:enterAnim="@anim/fade_in"
                app:exitAnim="@anim/fade_out" />
        </fragment>
        <fragment
            android:id="@+id/watchlistTab"
            android:name="com.robinhsueh.nerdia.view.fragments.watchlist.tab.WatchlistTab"
            android:label="@string/label_unwatched_list"
            tools:layout="@layout/fragment_general_layout_with_tab">
            <action
                android:id="@+id/action_watchlistTab_to_profileFragment"
                app:destination="@id/profileFragment"
                app:enterAnim="@anim/fade_in"
                app:exitAnim="@anim/fade_out" />
        </fragment>
        <fragment
            android:id="@+id/ratedListFragment"
            android:name="com.robinhsueh.nerdia.view.fragments.profile.ratedlist.RatedListFragment"
            android:label="@string/label_rated_list"
            tools:layout="@layout/fragment_general_layout_with_tab">
            <action
                android:id="@+id/action_ratedListFragment_to_profileFragment"
                app:destination="@id/profileFragment"
                app:enterAnim="@anim/fade_in"
                app:exitAnim="@anim/fade_out" />
        </fragment>
    </navigation>


</navigation>