<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:foreground="?attr/selectableItemBackgroundBorderless"
    android:paddingTop="16dp"
    android:paddingBottom="16dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_poster"
        android:layout_width="112dp"
        android:layout_height="0dp"
        app:cardCornerRadius="4dp"
        app:layout_constraintDimensionRatio="H,3:5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_poster"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/label_media_poster" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/text_main_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/text_air_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/card_poster"
        app:layout_constraintTop_toTopOf="@+id/card_poster"
        tool:text="@string/label_profile_main_name" />

    <TextView
        android:id="@+id/text_air_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintBottom_toBottomOf="@+id/card_poster"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/card_poster"
        app:layout_constraintTop_toBottomOf="@+id/text_main_name"
        tool:text="@string/label_on_air_date" />

    <TextView
        android:id="@+id/text_episodes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintBottom_toBottomOf="@+id/card_poster"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/card_poster"
        app:layout_constraintTop_toBottomOf="@+id/text_air_date"
        tool:text="@string/label_numOfEpisodes" />

</androidx.constraintlayout.widget.ConstraintLayout>