<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:foreground="?attr/selectableItemBackgroundBorderless"
    android:paddingTop="16dp"
    android:paddingBottom="16dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_profile"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_profile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/label_profile_img"
            app:srcCompat="@drawable/ic_profile" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/text_main_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/label_profile_main_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/text_sub_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/card_profile"
        app:layout_constraintTop_toTopOf="@+id/card_profile" />

    <TextView
        android:id="@+id/text_sub_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/label_profile_sub_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintBottom_toBottomOf="@+id/card_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/card_profile"
        app:layout_constraintTop_toBottomOf="@+id/text_main_name" />

</androidx.constraintlayout.widget.ConstraintLayout>